# Traning-and-Inference

./: CMakeLists.txt  README.md  classifier.cpp
notebooks/: classifier.ipynb  torchscript.ipynb
